# NoNameTaxAssistant

./: PCC-3(6)_v_12K (1).xml  PCC-3(6)_v_12K (2).xml  README.md  pyproject.toml  styl (86) (1).xsl  wyroznik (5).xml
backend/: app.py
model/: package-lock.json
model/data/tax_forms/pcc3/: related_fields.json  schema.json
specs/: PCC-3(6)_v_12K (1).xml  PCC-3(6)_v_12K (2).xml  styl (86) (1).xsl  wyroznik.xml
