
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Szymon Zaborowski", email = "zabor2432@gmail.com"},
    {name = "Traumaasz Dłuski", email = ""},
    {name = "Maja Świtaj", email = ""},
]
dependencies = [
    "azure-ai-resources>=1.0.0b8",
    "azure-identity>=1.18.0",
    "xmlschema>=3.4.2",
]
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.pdm]
